Header semántico básico

--- a/themes/novatec/layouts/partials/header.html
+++ b/themes/novatec/layouts/partials/header.html
@@ -1,3 +1,21 @@
-<nav>
-  Aquí va el nav
-</nav>
+<header>
+  <img src="some/path" alt="Logo Description" class="logo">
+  <nav>
+    <ul>
+       <li>Menu 1</li>
+       <li>Menu 2</li>
+       <li>Menu 3</li>
+     </ul>
+  </nav>
+  <section role="search">
+    <form action="#" method="get">
+        <fieldset>
+            <legend>Search this website:</legend>
+            <label for="s">
+                <input type="search" name="s" id="s" placeholder="Search..." maxlength="200" />
+            </label>
+            <button type="submit" title="Search this website now">Submit</button>
+        </fieldset>
+    </form>
+  </section>
+</header>
