Listados de páginas en list and sections

--- a/themes/novatec/layouts/_default/list.html
+++ b/themes/novatec/layouts/_default/list.html
@@ -1,1 +1,8 @@
-lista
+{{ $context := . }}
+<h1>{{ .Title }}</h1>
+<ul>
+{{ $paginator := .Paginate .Data.Pages }}
+{{ range $paginator.Pages }}
+    {{ .Render "summary" }}
+{{ end }}
+</ul>
