--- a/themes/novatec/layouts/_default/section.html
+++ b/themes/novatec/layouts/_default/section.html
@@ -3,7 +3,9 @@
     {{ .Content }}
     <ul class="contents">
       {{ range .Paginator.Pages }}
-        <li>{{.title}}</li>
+        <li>
+          <a href="{{.Permalink}}">{{.Title}}</a>
+        </li>
       {{ end }}
     </ul>
   </main>
