--- a/themes/novatec/layouts/_default/section.html
+++ b/themes/novatec/layouts/_default/section.html
@@ -1,12 +1,8 @@
 {{ define "main" }}
-  <main>
-    {{ .Content }}
-    <ul class="contents">
-      {{ range .Paginator.Pages }}
-        <li>
-          <a href="{{.Permalink}}">{{.Title}}</a>
-        </li>
-      {{ end }}
-    </ul>
-  </main>
+  <h1>{{.Title}}</h1>
+  <ul class="contents">
+    {{ range .Paginator.Pages }}
+      {{ .Render "li" }}
+    {{ end }}
+  </ul>
 {{ end }}
