templates de taxonomy y single

--- a/themes/novatec/layouts/_default/taxonomy.html
+++ b/themes/novatec/layouts/_default/taxonomy.html
@@ -1,4 +1,8 @@
-+++
-title: taxonomy
-+++
-Hola
+{{ define "main" }}
+  <h1>{{ .Title }}</h1>
+  <ul class="tags">
+    {{ range .Pages }}
+     <li><a href="{{ .Permalink }}">{{ .Title}}</a></li>
+    {{ end }}
+  </ul>
+{{end}}
