--- a/themes/novatec/layouts/partials/footer.html
+++ b/themes/novatec/layouts/partials/footer.html
@@ -1,3 +1,67 @@
 <footer>
-  footer
+  <section>
+    <h3>Novatec Industrial S.A.</h3>
+    <p>De Panasonic, 1km al Sur y 1km al Oeste, Ofibodegas Milano, Bodega #31. Radial Santa Ana-Belén, Heredia, Costa Rica.</p>
+    <p><a href="https://www.google.co.cr/maps/place/Novatec+Industrial+S.A./@9.9658497,-84.2074156,17z/data=!4m2!3m1!1s0x0000000000000000:0xb454eda2f42f9176?hl=es" target="_blank">Abrir en Google Maps</a></p>
+    <p><a class="btn btn-primary" target="_blank" href="waze://?ll=9.9658497,-84.2074156,17&amp;navigate=yes">Abrir en Waze</a></p>
+  </section>
+  <section>
+    <h3>Contacto</h3>
+    <ul>
+      <li>650-4005 Belén, Heredia, Costa Rica.</li>
+      <li>+506 2239-1111</li>
+      <li>+506 2239-1212</li>
+      <li><a href="mailto:info@novatec.cr" target="_top">info@novatec.cr</a></li>
+    </ul>
+  </section>
+  <section>
+    <h3>Redes Sociales</h3>
+    <ul class="nav  nav-pills nav-stacked list-unstyled" id="social-footer">
+      <li>
+        <a class="" href="https://www.facebook.com/NovatecIndustrial" target="_blank">
+          <i class="fa fa-facebook-square"></i>
+          <span>Facebook</span>
+        </a>
+      </li>
+      <li>
+        <a class="" href="https://twitter.com/novatecnews" target="_blank">
+          <i class="fa fa-twitter-square"></i>
+          <span>Twitter</span>
+        </a>
+      </li>
+    </ul>
+  </section>
+  <section>
+    <h3>Boletín de noticias</h3>
+    <form>
+      <label for="email">Email</label>
+      <input type="email" name="email" />
+      <label for="nombre">Nombre</label>
+      <input type="text" name="nombre" />
+      <label for="apellido">Apellido</label>
+      <input type="text" name="nombre" />
+      <label for="empresa">Empresa</label>
+      <input type="text" name="empresa" />
+      <label for="puesto">Puesto</label>
+      <input type="text" for="puesto" />
+      <label for="segmento_industria">Segmento de la industria</label>
+      <select id="segmento_industria" class="" name="segmento_industria">
+        <option value="">- Seleccione una industria -</option>
+        <option value="Alimentos y Bebidas">Alimentos y Bebidas</option>
+        <option value="Dispositivos Médicos">Dispositivos Médicos</option>
+        <option value="Energía">Energía</option>
+        <option value="Farmacéuticos">Farmacéuticos</option>
+        <option value="Industria Pesada">Industria Pesada</option>
+        <option value="Papelera">Papelera</option>
+        <option value="Contratistas">Contratistas</option>
+        <option value="Electrónica">Electrónica</option>
+        <option value="Refinería">Refinería</option>
+        <option value="Químicos">Químicos</option>
+        <option value="Ingenios">Ingenios</option>
+        <option value="Integradores">Integradores</option>
+        <option value="Agrícola">Agrícola</option>
+        <option value="Otros">Otros</option>
+      </select>
+    </form>
+  </section>
 </footer>
