Instalé font-awesome desde el cdn para desarrollo

--- a/themes/novatec/layouts/_default/baseof.html
+++ b/themes/novatec/layouts/_default/baseof.html
@@ -4,6 +4,7 @@
   <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://use.fontawesome.com/11a79f3edd.js"></script>
   <link rel="stylesheet" type="text/css" href="/site.css">
 </head>
 <body>
