--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -21,40 +21,103 @@ header {
 .main-nav {
   @include grid-column(8);
 
-  ul {
+  .first-level {
     list-style: none;
     margin: 0;
     padding: 0;
     @include clearfix;
   }
 
-  li {
-    float: left;
-    display: block;
-  }
-
-  a {
-    background: $blanco;
-    border-radius: $general-border-radius;
+  .first-level-link {
     color: $text-color;
     position: relative;
     display: inline-block;
     padding: 15px;
     font-size: 14px;
     transition: background ease 0.5s;
+  }
+
+  .first-level-item {
+    float: left;
+    display: block;
+    position: relative;
+    background: $blanco;
+    border-radius: $general-border-radius;
 
     &:hover {
       background: $azul;
       color: $blanco;
       text-decoration: none;
+
+      & > .first-level-link {
+        color: $blanco;
+        text-decoration: none;
+      }
+    }
+
+    &.active {
+      background: $azul;
+
+      .first-level-link {
+        color: $blanco;
+      }
     }
   }
 
-  .active a {
-    background: $azul;
-    color: $blanco;
+  .fa {
+    margin-left: 5px;
   }
 
+}
+
+.second-level {
+  box-sizing: content-box;
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 400px;
+  columns: 2;
+  -webkit-columns: 2;
+  -moz-columns: 2;
+  background: $blanco;
+  padding: $general-padding;
+  border: solid 1px $mid-grey;
+  border-radius: $general-border-radius;
+  box-shadow: 1px 1px 5px rgba(68,68,68,0.3);
+
+  .second-level-item {
+    display: block;
+    width: 100%;
+  }
+
+  .second-level-link {
+    white-space: normal;
+    display: block;
+    padding: 5px;
+    width: 100%;
+    border-radius: 0;
+    color: $text-color;
+    font-size: 14px;
+    transition: background ease 0.5s;
+
+    &:hover {
+      background: $light-grey;
+      color: $text-color;
+    }
+  }
+
+  .active.second-level-item {
+    background: $azul;
+
+    & a {
+      color: $blanco;
+    }
+  }
+}
+
+.first-level li:hover > .second-level {
+  display: block;
 }
 
 .header-search {
