--- a/themes/novatec/layouts/partials/header.html
+++ b/themes/novatec/layouts/partials/header.html
@@ -4,10 +4,24 @@
   </div>
   <nav class="main-nav">
     {{ $currentPage := . }}
-    <ul>
+    <ul class="first-level">
       {{ range .Site.Menus.principal }}
-        <li{{if or ($currentPage.IsMenuCurrent "principal" .) ($currentPage.HasMenuCurrent "principal" .) }} class="active"{{end}}>
-          <a href="{{.URL}}">{{ .Name }}</a>
+        {{ if .HasChildren }}
+          <li class="first-level-item{{if $currentPage.HasMenuCurrent "principal" . }} active{{end}}">
+            <a class="first-level-link" href="{{.URL}}">{{ .Name }}<i class="fa fa-caret-down"></i></a>
+              <ul class="second-level">
+                {{ range .Children }}
+                  <li class="second-level-item{{if $currentPage.IsMenuCurrent "principal" . }} active{{end}}">
+                    <a class="second-level-link" href="{{.URL}}"> {{ .Name }} </a>
+                  </li>
+                {{ end }}
+              </ul>
+            </li>
+          {{ else }}
+            <li class="first-level-item{{if or ($currentPage.IsMenuCurrent "principal" .) ($currentPage.HasMenuCurrent "principal" .) }} active{{end}}">
+              <a class="first-level-link" href="{{.URL}}">{{ .Name }}</a>
+            </li>
+          {{ end }}
         </li>
       {{ end }}
     </ul>
