--- a/themes/novatec/layouts/partials/header.html
+++ b/themes/novatec/layouts/partials/header.html
@@ -7,7 +7,7 @@
     <ul class="first-level">
       {{ range .Site.Menus.principal }}
         {{ if .HasChildren }}
-          <li class="first-level-item{{if $currentPage.HasMenuCurrent "principal" . }} active{{end}}">
+          <li class="first-level-item{{if or ($currentPage.HasMenuCurrent "principal" .) ($currentPage.IsMenuCurrent "principal" .) }} active{{end}}">
             <a class="first-level-link" href="{{.URL}}">{{ .Name }}<i class="fa fa-caret-down"></i></a>
               <ul class="second-level">
                 {{ range .Children }}
