--- a/themes/novatec/layouts/partials/header.html
+++ b/themes/novatec/layouts/partials/header.html
@@ -1,8 +1,14 @@
 <header>
+  <a href="javascript:void(0)" id="abrir-main-nav-button" onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i>
+</a>
   <div class="header-logo-container">
     <img src="/images/Logo-Novatec-amarillo.jpg" alt="Logo Description" class="header-logo">
   </div>
-  <nav class="main-nav">
+  <nav id="main-nav" role="navigation">
+    <div class="cerrar-main-nav">
+      <h3>Menú principal</h3>
+      <a href="javascript:void(0)" id="cerrar-main-nav-button" class="closebtn" onclick="closeNav()">&times;</a>
+    </div>
     {{ $currentPage := . }}
     <ul class="first-level">
       {{ range .Site.Menus.principal }}
