--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -56,6 +56,7 @@ header {
     padding: 0;
     box-shadow: none;
     overflow: visible;
+    transform: translate3d(0, 0, 0);
   }
 
   .first-level {
@@ -177,6 +178,7 @@ header {
 
   @include grid-media($desktop-grid) {
     @include grid-column(2);
+    display: block;
   }
 }
 
