Empecé el footer

--- a/themes/novatec/layouts/partials/footer.html
+++ b/themes/novatec/layouts/partials/footer.html
@@ -1,20 +1,20 @@
-<footer>
-  <section>
+<footer id="footer">
+  <section class="footer-section">
     <h3>Novatec Industrial S.A.</h3>
-    <p>De Panasonic, 1km al Sur y 1km al Oeste, Ofibodegas Milano, Bodega #31. Radial Santa Ana-Belén, Heredia, Costa Rica.</p>
-    <p><a href="https://www.google.co.cr/maps/place/Novatec+Industrial+S.A./@9.9658497,-84.2074156,17z/data=!4m2!3m1!1s0x0000000000000000:0xb454eda2f42f9176?hl=es" target="_blank">Abrir en Google Maps</a></p>
-    <p><a class="btn btn-primary" target="_blank" href="waze://?ll=9.9658497,-84.2074156,17&amp;navigate=yes">Abrir en Waze</a></p>
+    <p><i class="fa fa-globe" aria-hidden="true"></i> De Panasonic, 1km al Sur y 1km al Oeste, Ofibodegas Milano, Bodega #31. Radial Santa Ana-Belén, Heredia, Costa Rica.</p>
+    <p><a href="https://www.google.co.cr/maps/place/Novatec+Industrial+S.A./@9.9658497,-84.2074156,17z/data=!4m2!3m1!1s0x0000000000000000:0xb454eda2f42f9176?hl=es" target="_blank"><i class="fa fa-map-marker" aria-hidden="true"></i> Abrir en Google Maps</a></p>
+    <p><a class="btn-primary btn-waze" target="_blank" href="waze://?ll=9.9658497,-84.2074156,17&amp;navigate=yes">Abrir en Waze</a></p>
   </section>
-  <section>
+  <section class="footer-section">
     <h3>Contacto</h3>
     <ul>
-      <li>650-4005 Belén, Heredia, Costa Rica.</li>
-      <li>+506 2239-1111</li>
-      <li>+506 2239-1212</li>
-      <li><a href="mailto:info@novatec.cr" target="_top">info@novatec.cr</a></li>
+      <li><i class="fa fa-inbox" aria-hidden="true"></i> 650-4005 Belén, Heredia, Costa Rica.</li>
+      <li><i class="fa fa-phone" aria-hidden="true"></i> +506 2239-1111</li>
+      <li><i class="fa fa-fax" aria-hidden="true"></i> +506 2239-1212</li>
+      <li><a href="mailto:info@novatec.cr" target="_top"><i class="fa fa-inbox" aria-hidden="true"></i>  info@novatec.cr</a></li>
     </ul>
   </section>
-  <section>
+  <section class="footer-section">
     <h3>Redes Sociales</h3>
     <ul class="nav  nav-pills nav-stacked list-unstyled" id="social-footer">
       <li>
@@ -31,7 +31,7 @@
       </li>
     </ul>
   </section>
-  <section>
+  <section class="footer-section">
     <h3>Boletín de noticias</h3>
     <form>
       <label for="email">Email</label>
@@ -62,6 +62,10 @@
         <option value="Agrícola">Agrícola</option>
         <option value="Otros">Otros</option>
       </select>
+      <input type="submit" class="btn-primary" value="enviar" />
     </form>
   </section>
+  <div class="legal-footer">
+    Copyright © 2017 Novatec Industrial. Todos los derechos reservados.
+  </div>
 </footer>
