--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,3 +1,109 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the footer of the site/application.
 // -----------------------------------------------------------------------------
+
+#footer {
+  background: $dark-grey;
+  padding: $general-padding $general-padding 0;
+  color: $mid-grey;
+  @include grid-container;
+  font-size: 14px;
+  line-height: 1.5em;
+
+  @include grid-media($desktop-grid) {
+    padding: $general-padding 0 0;
+  }
+
+  h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: $blanco;
+    padding-bottom: 10px;
+    border-bottom: solid 1px $blanco;
+  }
+
+  ul {
+    padding: 0;
+    list-style: none;
+  }
+
+  li {
+    margin-bottom: 5px;
+  }
+
+  a, a:active, a:focus {
+    color: $mid-grey;
+
+    &:hover {
+      color: $blanco;
+      text-decoration: none;
+    }
+  }
+
+  p {
+    margin: 0 0 5px 0;
+  }
+
+  i {
+    margin-right: 5px;
+  }
+
+  label {
+    display: block;
+    margin: 5px 0 3px;
+  }
+
+  input[type='text'], input[type='email'] {
+    width: 100%;
+    border-radius: $general-border-radius;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: $text-color;
+    background-color: #ffffff;
+    background-image: none;
+    border: 1px solid $light-grey;
+  }
+
+  select {
+    width: 100%;
+    height: 34px;
+    margin-bottom: 10px;
+    color: $text-color;
+    background-color: #ffffff;
+    border: 1px solid $light-grey;
+  }
+
+  .btn-waze {
+    @include grid-media($desktop-grid) {
+      display: none;
+    }
+  }
+}
+
+.footer-section {
+  @include grid-media($desktop-grid) {
+    @include grid-column(3);
+  }
+}
+
+
+.legal-footer {
+  clear: both;
+  float: left;
+  width: calc(100% + $general-padding*2);
+  background: $negro;
+  color: $text-color;
+  margin-top: $general-padding*3;
+  margin-left: -$general-padding;
+  margin-right: -$general-padding;
+  padding: ($general-padding*2) $general-padding;
+  font-size: 12px;
+
+  @include grid-media($desktop-grid) {
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+  }
+}
