--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -9,6 +9,7 @@
   @include grid-container;
   font-size: 14px;
   line-height: 1.5em;
+  margin-top: $general-padding*2;
 
   @include grid-media($desktop-grid) {
     padding: $general-padding 0 0;
