--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -1,3 +1,26 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the button component.
 // -----------------------------------------------------------------------------
+
+.btn-primary, .btn-primary:active, .btn-primary:focus {
+  background:$azul;
+  color: $blanco;
+  padding: 5px;
+  border: 0;
+  display: inline-block;
+  margin-bottom: 0;
+  font-weight: 300;
+  text-align: center;
+  vertical-align: middle;
+  touch-action: manipulation;
+  white-space: nowrap;
+  padding: 8px 12px;
+  font-size: 14px;
+  border-radius: 3px;
+  height: 30px;
+  cursor: pointer;
+
+  &:hover {
+    background: darken($azul, 10%);
+  }
+}
