--- a/themes/novatec/layouts/partials/footer.html
+++ b/themes/novatec/layouts/partials/footer.html
@@ -3,7 +3,7 @@
     <h3>Novatec Industrial S.A.</h3>
     <p><i class="fa fa-globe" aria-hidden="true"></i> De Panasonic, 1km al Sur y 1km al Oeste, Ofibodegas Milano, Bodega #31. Radial Santa Ana-Belén, Heredia, Costa Rica.</p>
     <p><a href="https://www.google.co.cr/maps/place/Novatec+Industrial+S.A./@9.9658497,-84.2074156,17z/data=!4m2!3m1!1s0x0000000000000000:0xb454eda2f42f9176?hl=es" target="_blank"><i class="fa fa-map-marker" aria-hidden="true"></i> Abrir en Google Maps</a></p>
-    <p><a class="btn-primary btn-waze" target="_blank" href="waze://?ll=9.9658497,-84.2074156,17&amp;navigate=yes">Abrir en Waze</a></p>
+    <p><a class="btn-primary btn-waze" target="_blank" href="waze://?ll=9.9658497,-84.2074156,17&amp;navigate=yes"><i class="fa fa-location-arrow" aria-hidden="true"></i> Abrir en Waze</a></p>
   </section>
   <section class="footer-section">
     <h3>Contacto</h3>
