--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -27,7 +27,8 @@
 
 // 5. Components
 @import
-  'components/button';
+  'components/button',
+  'components/slides';
 
 // 6. Page-specific styles
 @import
