--- a/themes/novatec/layouts/partials/slider.html
+++ b/themes/novatec/layouts/partials/slider.html
@@ -7,7 +7,7 @@
     </li>
   {{ end }}
   <div class="slider-controls">
-    <button class="controls" id="previous">Previous</button>
-    <button class="controls" id="next">Next</button>
+    <button class="controls" id="previous"><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
+    <button class="controls" id="next"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
   </div>
 </ul>
