--- a/assets/scss/components/_slides.scss
+++ b/assets/scss/components/_slides.scss
@@ -1,6 +1,6 @@
 #slides {
   position: relative;
-  height: 300px;
+  height: 400px;
   padding: 0px;
   margin: 0px;
   list-style-type: none;
@@ -79,4 +79,31 @@
       margin-right: -4px;
     }
   }
+}
+
+.slide-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  color: $blanco;
+  width: 100%;
+  padding: $general-padding;
+  text-align: center;
+}
+
+.slide-title {
+  font-size: 1.5em;
+  padding: 0;
+  line-height: 1;
+}
+
+.slide-description {
+  font-size: 0.8em;
+  line-height: 1;
+  padding: 0;
+}
+
+.slide-image {
+  width: 100%;
 }
