--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -11,6 +11,7 @@ header {
   display: table;
   position: fixed;
   top: 0;
+  z-index: 100;
 
   @include grid-media($desktop-grid) {
     display: block;
