barra azul y fondo imagen en el home

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -28,6 +28,8 @@
 // 5. Components
 @import
   'components/button',
+  'components/barra_azul',
+  'components/fondo_imagen',
   'components/slides';
 
 // 6. Page-specific styles
