--- a/themes/novatec/layouts/index.html
+++ b/themes/novatec/layouts/index.html
@@ -1,4 +1,6 @@
 {{ define "main" }}
   {{ partial "slider.html" . }}
+  {{ partial "barra-azul.html" . }}
+  {{ partial "fondo-imagen.html" . }}
   {{.Content}}
 {{ end }}
