sección de últimas noticias en el home

--- a/themes/novatec/layouts/index.html
+++ b/themes/novatec/layouts/index.html
@@ -2,5 +2,6 @@
   {{ partial "slider.html" . }}
   {{ partial "barra-azul.html" . }}
   {{ partial "fondo-imagen.html" . }}
+  {{ partial "noticias-home.html" . }}
   {{.Content}}
 {{ end }}
