marcas en el home

--- a/themes/novatec/layouts/index.html
+++ b/themes/novatec/layouts/index.html
@@ -3,5 +3,6 @@
   {{ partial "barra-azul.html" . }}
   {{ partial "fondo-imagen.html" . }}
   {{ partial "noticias-home.html" . }}
+  {{ partial "marcas-home.html" . }}
   {{.Content}}
 {{ end }}
