estilos de marcas en el home

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -30,6 +30,7 @@
   'components/button',
   'components/barra_azul',
   'components/fondo_imagen',
+  'components/marcas',
   'components/slides';
 
 // 6. Page-specific styles
