--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1,3 +1,8 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the home page.
 // -----------------------------------------------------------------------------
+.home-title {
+  text-align: center;
+  margin-top: $general-padding*3;
+  font-size: 24px;
+}
