agregué clase home-title al título de noticias

--- a/themes/novatec/layouts/partials/noticias-home.html
+++ b/themes/novatec/layouts/partials/noticias-home.html
@@ -1,6 +1,6 @@
 <section id="ultimas-noticias">
   <div class="container">
-    <h2>Últimas noticias</h2>
+    <h2 class="home-title">Últimas noticias</h2>
     <ul>
       {{ range first 4 (where (where .Data.Pages "Section" "noticias" ) ".Params.draft" "==" false) }}
          <li>{{ .Title }} - {{.Date}}</li>
