--- a/themes/novatec/layouts/partials/noticias-home.html
+++ b/themes/novatec/layouts/partials/noticias-home.html
@@ -7,7 +7,7 @@
            <a class="noticia-image-link" href="{{ .Permalink }}">
              <div class="noticia-imagen-container">
                <div class="noticia-imagen">
-                 <img src="{{ .Params.image }}" alt="{{ .Title }}" />
+                 <img src="{{ .Params.imagen_intro }}" alt="{{ .Title }}" />
                </div>
              </div>
            </a>
