page title partial

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -29,6 +29,7 @@
 @import
   'components/button',
   'components/barra_azul',
+  'components/page-title',
   'components/fondo_imagen',
   'components/noticias-home',
   'components/marcas',
