--- a/themes/novatec/layouts/_default/baseof.html
+++ b/themes/novatec/layouts/_default/baseof.html
@@ -10,6 +10,8 @@
 <body translate="no">
   {{ partial "header.html" . }}
   <main id="main">
+    {{ block "page-title" . }}
+    {{ end }}
     {{ block "main" . }}
     {{ end }}
   </main>
