--- a/themes/novatec/layouts/productos/list.html
+++ b/themes/novatec/layouts/productos/list.html
@@ -1,6 +1,8 @@
+{{ define "page-title"}}
+  {{ partial "page-title.html" .}}
+{{ end }}
 {{ define "main" }}
   <div class="container">
-    <h1>{{.Title}}</h1>
     <ul>
       {{ range where .Site.Pages "Section" "familias" }}
         <li>
