Add scripts blog to baseof
Up to this moment, js is not required on all pages. I made this block to
be able to place scripts only on the needed pages.

I also placed the scripts for the slider on the home page.

--- a/themes/novatec/layouts/_default/baseof.html
+++ b/themes/novatec/layouts/_default/baseof.html
@@ -16,5 +16,5 @@
     {{ end }}
   </main>
   {{ partial "footer.html" . }}
-  <script src="/site.js"></script>
+  {{ block "scripts" .}}{{ end }}
 </body>
