--- a/themes/novatec/layouts/index.html
+++ b/themes/novatec/layouts/index.html
@@ -6,3 +6,6 @@
   {{ partial "marcas-home.html" . }}
   {{.Content}}
 {{ end }}
+{{ define "scripts" }}
+  <script src="/site.js"></script>
+{{ end }}
