Add debugging system

--- a/themes/novatec/layouts/_default/baseof.html
+++ b/themes/novatec/layouts/_default/baseof.html
@@ -16,5 +16,8 @@
     {{ end }}
   </main>
   {{ partial "footer.html" . }}
+  {{ if eq (getenv "LOCAL_DEV") "true" }}
+    {{ partial "debug.html" . }}
+  {{ end }}
   {{ block "scripts" .}}{{ end }}
 </body>
