--- a/themes/novatec/layouts/section/productos.html
+++ b/themes/novatec/layouts/section/productos.html
@@ -5,7 +5,7 @@
 {{ define "main" }}
   <div class="container">
     <ul class="product-grid">
-      {{ range where .Site.Pages "Section" "familias" }}
+      {{ range ($.Site.GetPage "taxonomyTerm" "familias").Pages }}
         <li class="product-grid-block">
           <a href="{{ .Permalink }}">
             <div class="product-grid-image" style="background-image: url({{ .Params.imagen }});"></div>
